--- a/orders/.env.example
+++ b/orders/.env.example
@@ -1,10 +1,12 @@
-SECRET_KEY=your_django_secret_key_from_settings.py
-POSTGRES_HOST=your_db_hostname
-POSTGRES_PORT=your_db_port
-POSTGRES_USER=your_db_username
-POSTGRES_PASSWORD=your_db_password
-POSTGRES_DB=your_db_name
-SMTP_SERVER=your_smtp_domain
-SMTP_PORT=your_smtp_port
-SENDER_EMAIL_ADDRESS=your_email_address
-SENDER_EMAIL_PASSWORD=your_email_password
+SECRET_KEY=django-insecure-pj%h@*2%er!=+3h2_6yk*ki^r!an_oz=zxa_+7^4qm0=-al%ea'
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+PGPASSWORD=postgres
+POSTGRES_DB=orders
+ADMIN_EMAIL=topclassprogrammer@gmail.com
+SMTP_SERVER=smtp.mail.ru
+SMTP_PORT=465
+SENDER_EMAIL_ADDRESS=netology.diplom@mail.ru
+SENDER_EMAIL_PASSWORD=CLdm7yW4U9nivz9mbexu
