--- a/orders/.env.example
+++ b/orders/.env.example
@@ -5,6 +5,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 PGPASSWORD=postgres
 POSTGRES_DB=orders
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=password
 ADMIN_EMAIL=topclassprogrammer@gmail.com
 SMTP_SERVER=smtp.mail.ru
 SMTP_PORT=465
